# openmind-cellular

./: .gitignore  README.md  pyproject.toml
src/openmind_cellular/: __init__.py  cell.py  dataflow.py  infer.py  metabolism.py  probe.py  sense.py  train.py
src/openmind_cellular.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cellular.py
