[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmind-cellular"
version = "0.1.0"
description = "Resource-adaptive Jupyter computation layer — each cell adapts to available hardware, APIs, and sensors."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "SuperInstance"}]
keywords = ["jupyter", "adaptive", "resource-aware", "ml", "edge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
gpu = ["torch"]
api = ["openai"]
openmind = ["openmind"]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
